--- a/index.html
+++ b/index.html
@@ -4,36 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Calculatrice</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Calculator</title>
+    <link href="/css/index.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="calculatrice">
-        <div class="interface"></div>
+    <div class="calculator-grid">
+        <div class="output">
+            <div data-previous-operand class="previous-operand"></div>
+            <div data-current-operand class="current-operand"></div>
+        </div>
         <div class="keys">
-            <button data-key="8" class="btn">C</button>
-            <button data-key="53" class="btn">(</button>
-            <button data-key="219" class="btn">)</button>
-            <button data-key="111" class="btn">/</button>
-            <button data-key="103" class="btn">7</button>
-            <button data-key="104" class="btn">8</button>
-            <button data-key="105" class="btn">9</button>
-            <button data-key="106" class="btn">*</button>
-            <button data-key="100" class="btn">4</button>
-            <button data-key="101" class="btn">5</button>
-            <button data-key="102" class="btn">6</button>
-            <button data-key="109" class="btn">-</button>
-            <button data-key="97" class="btn">1</button>
-            <button data-key="98" class="btn">2</button>
-            <button data-key="99" class="btn">3</button>
-            <button data-key="107" class="btn">+</button>
-            <button data-key="96" class="btn">0</button>
-            <button data-key="110" class="btn">.</button>
-            <button data-key="13" class="btn">=</button>
+            <button data-all-clear class="span-two">AC</button>
+            <button data-delete>DEL</button>
+            <button data-operation>÷</button>
+            <button data-number>1</button>
+            <button data-number>2</button>
+            <button data-number>3</button>
+            <button data-operation>*</button>
+            <button data-number>4</button>
+            <button data-number>5</button>
+            <button data-number>6</button>
+            <button data-operation>+</button>
+            <button data-number>7</button>
+            <button data-number>8</button>
+            <button data-number>9</button>
+            <button data-operation>-</button>
+            <button data-number>.</button>
+            <button data-number>0</button>
+            <button data-equals class="span-two">=</button>
         </div>
     </div>
-    <script src="js/index.js"></script>
+    <script src="/js/index.js" defer></script>
 </body>
 
 </html>
